// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImageAttribute does not render action buttons while not editing 1`] = `
<div
  className="attribute"
>
   
  <a
    href="https://example.com?HMAC-header=foo"
  >
    <img
      className="image-thumbnail"
      src="https://example.com?HMAC-header=foo&thumbnail=true"
    />
  </a>
   
</div>
`;

exports[`ImageAttribute renders "missing file" correctly while not editing 1`] = `
<div
  className="attribute"
>
   
  <div
    className="document_empty"
  >
    No file
  </div>
   
</div>
`;

exports[`ImageAttribute renders blank paths correctly while not editing 1`] = `
<div
  className="attribute"
>
   
  <span
    className="file-blank"
  >
     Blank file 
  </span>
   
</div>
`;

exports[`ImageAttribute renders the button bar while editing 1`] = `
<div
  className="attribute file"
>
  <input
    onChange={[Function]}
    style={
      Object {
        "display": "none",
      }
    }
    type="file"
  />
  <div
    className="file-buttons"
  >
    <span
      className="fa-stack fa-fw"
      onClick={[Function]}
      title="Link a file from Metis"
    >
      <i
        className="icon cloud cloud fa fa-2x fa-cloud"
      />
    </span>
    <span
      className="fa-stack fa-fw"
      onClick={[Function]}
      title="Mark this file as blank"
    >
      <i
        className="icon stub meh-blank fa fa-2x fa-meh-blank"
      />
    </span>
    <span
      className="fa-stack fa-fw"
      onClick={[Function]}
      title="Remove this file link"
    >
      <i
        className="icon remove trash-alt fa fa-2x fa-trash-alt"
      />
    </span>
  </div>
  <span
    className="file-missing"
  >
     No file 
  </span>
</div>
`;

exports[`ImageAttribute renders thumbnail in view mode if file exists 1`] = `
<div
  className="attribute"
>
   
  <a
    href="https://example.com?HMAC-header=foo"
  >
    <img
      className="image-thumbnail"
      src="https://example.com?HMAC-header=foo&thumbnail=true"
    />
  </a>
   
</div>
`;
